# beskope

./: Cargo.toml  README.md
.cargo/: config.toml
res/: io.github.jturcotte.Beskope.desktop  io.github.jturcotte.BeskopeWindowed.desktop
src/: audio.rs  config.rs  main.rs  ridgeline.wgsl  shader.wgsl  surface.rs  ui.rs  view.rs  views.rs  wlr_layers.rs
src/surface/: mod.rs  slint.rs  wayland.rs
src/view/: compressed.rs  mod.rs  ridgeline.rs  ridgeline.wgsl
src/view/models/: cqt.rs  mod.rs  waveform.rs
src/views/: compressed.rs  compressed.wgsl  ridgeline.rs  ridgeline.wgsl
ui/: canvas.slint  main.slint  test.slint
