[package]
name = "beskope"
version = "0.1.0"
authors = ["Jocelyn Turcotte <turcotte.j@gmail.com>"]
edition = "2024"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
num-complex = "0.4"
pipewire = { version = "0.8.0", features = ["v0_3_77"] }
pollster = "0.4"
raw-window-handle = "0.6"
ringbuf = "0.4"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3.17"
smithay-client-toolkit = "0.19"
splines = "4"
toml = "0.8"
wayland-client = "0.31"
wgpu = "23"

[dependencies.slint]
version = "1"
default-features = false
features = ["compat-1-0", "backend-winit", "renderer-winit-femtovg", "serde"]

[build-dependencies]
slint-build = "1"

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
