[package]
name = "beskope"
version = "0.1.0"
edition = "2024"
description = "A desktop waveform visualizer for Wayland and PipeWire"
repository = "https://github.com/jturcotte/beskope"
authors = ["Jocelyn Turcotte <turcotte.j@gmail.com>"]
license = "MIT"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
interprocess = "2.2.3"
num-complex = "0.4"
pipewire = { version = "0.8.0", features = ["v0_3_77"] }
pollster = "0.4"
raw-window-handle = "0.6"
ringbuf = "0.4"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
smithay-client-toolkit = "0.19"
splines = "4"
toml = "0.8"
wayland-client = "0.31"
wgpu = "26"

[dependencies.slint]
version = "~1.13"
default-features = false
features = [
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg-wgpu",
    "serde",
    "unstable-wgpu-26",
]

[build-dependencies]
slint-build = "~1.13"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[package.metadata.deb]
depends = ["libpipewire-0.3-0"]
assets = [
    [
        "target/release/beskope",
        "usr/bin/",
        "755",
    ],
    [
        "res/io.github.jturcotte.Beskope.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "res/io.github.jturcotte.Beskope.svg",
        "usr/share/icons/hicolor/scalable/apps/",
        "644",
    ],
]
