[package]
name = "beskope"
version = "0.1.0"
edition = "2024"
description = "A desktop waveform visualizer for Wayland and PipeWire"
repository = "https://github.com/jturcotte/beskope"
authors = ["Jocelyn Turcotte <turcotte.j@gmail.com>"]
license = "MIT"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
interprocess = "2.2.3"
mpris = "2"
num-complex = "0.4"
pipewire = { version = "0.8.0", features = ["v0_3_77"] }
pollster = "0.4"
raw-window-handle = "0.6"
ringbuf = "0.4"
rustfft = "6"
qdft = { git = "https://github.com/jturcotte/qdft", rev = "9dbd5beffff88c76347cd4ca7a4bc2afd696f279" }
serde = { version = "1", features = ["derive"] }
smithay-client-toolkit = "0.19"
splines = "4"
toml = "0.8"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wgpu = "27"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "webp",
] }
ureq = { version = "2", features = ["tls", "gzip"] }
url = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"

[dependencies.slint]
git = "https://github.com/jturcotte/slint"
rev = "5d4ed377371fbca5bd6bb2592dab547c4d24816b"
version = "~1.14"
default-features = false
features = [
    "compat-1-2",
    "backend-winit",
    "renderer-skia",
    "renderer-femtovg",
    "serde",
    "unstable-wgpu-27",
]

[build-dependencies]
slint-build = { git = "https://github.com/jturcotte/slint", rev = "5d4ed377371fbca5bd6bb2592dab547c4d24816b" }

[profile.release]
panic = 'abort'
# debug = true

[profile.dev]
panic = 'abort'

[package.metadata.deb]
depends = ["libpipewire-0.3-0"]
assets = [
    [
        "target/release/beskope",
        "usr/bin/",
        "755",
    ],
    [
        "res/io.github.jturcotte.Beskope.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "res/io.github.jturcotte.Beskope.svg",
        "usr/share/icons/hicolor/scalable/apps/",
        "644",
    ],
]
